--- a/static/css/mis_estilos.css
+++ b/static/css/mis_estilos.css
@@ -2,22 +2,27 @@
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 20px;
-    position: sticky; top:0rem; z-index: 1; background-color: antiquewhite; 
+    margin-bottom: 10px;
+    position: sticky; top:0rem; z-index: 1; background-color: rgba(247, 180, 214, 0.8); 
 }
 
 th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
+    border: 1px solid #dfcce4;
+    padding: 4px;
     text-align: left;
 }
 
 @media (max-width: 600px) {
     /* Cambia el diseño en pantallas más pequeñas */
-    th, td {
+    td {
         display: block;
         width: 100%;
         box-sizing: border-box;
+    }
+
+    th {
+        display: none;
+        
     }
 }
 
