--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -14,12 +14,16 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'registro' %}">Registrarse</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="ingreso.html">Ingresar</a>
-                  </li>
+                  {% if user.is_authenticated %}
+                  <p></p>
+                  {% else %}
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="{% url 'registro' %}">Registrarse</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="ingreso.html">Ingresar</a>
+                    </li>
+                  {% endif %}
                   <li class="nav-item">
                     <a class="nav-link" href= "{% url 'productos' %}">Productos</a>
                   </li>
