--- a/base/templates/partials/footer.html
+++ b/base/templates/partials/footer.html
@@ -33,7 +33,7 @@
           <a href="https://www.linkedin.com/" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" title="Red social linkedin">{% bs_icon 'linkedin' %}</a>
         </div> 
         <div class="col-md-4 mt-2">
-          <a href="#" style="text-decoration: none"><h5 class="text-center text-white-50">Centro de ayuda</h5></a>
+          <a href="{% url 'ayuda' %}" style="text-decoration: none"><h5 class="text-center text-white-50">Centro de ayuda</h5></a>
         </div>
         <div class="col-md-4 mt-2">
           <a href="#" style="text-decoration: none"><h5 class="text-center text-white-50">Términos y condiciones</h5></a>
