--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -18,10 +18,10 @@
                   <p></p>
                   {% else %}
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="{% url 'registro' %}">Registrarse</a>
+                      <a class="nav-link" aria-current="page" href="#">Registrarse</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="ingreso.html">Ingresar</a>
+                      <a class="nav-link" aria-current="page" href="{% url 'login' %}">Ingresar</a>
                     </li>
                   {% endif %}
                   <li class="nav-item">
