--- a/base/templates/comercial/login.html
+++ b/base/templates/comercial/login.html
@@ -9,14 +9,15 @@
     <title>Cetta - {{titulo}}</title>
     {% bootstrap_css %}
 </head>
-<body>
-    {% block contenido %}
+<body class="bg-success bg-opacity-10 bg-gradient">
+
+  {% block contenido %}
 
 <div class="container">
     <div class="row">
         <div class="col">
 
-            <h2>Login</h2>
+            <h2>Ingreso</h2>
           
             <!-- Formulario -->
             <form method="post">
@@ -31,7 +32,7 @@
                 <input type="password" name="password" class="form-control">
               </div>
           
-              <button type="submit" class="btn btn-primary mt-2">Login</button>
+              <button type="submit" class="btn btn-primary mt-2">Ingresar</button>
           
             </form>
           
