--- a/base/templates/comercial/login.html
+++ b/base/templates/comercial/login.html
@@ -11,34 +11,38 @@
 </head>
 <body class="bg-success bg-opacity-10 bg-gradient">
 
-  {% block contenido %}
+{% block contenido %}
 
-<div class="container">
-    <div class="row">
-        <div class="col">
+<div class="container w-75 bg-dark bg-opacity-10 bg-gradient rounded shadow-sm mt-2 mb-2">
+    <div class="row bg-transparent align-items-lg-stretch">
+        <div class="col bg-transparent">
 
-            <h2>Ingreso</h2>
-          
+          <h3 class="text-center">Ingresar</h3>
+          <h4 class="text-center mb-5">Inicie sesión para continuar</h4>
             <!-- Formulario -->
-            <form method="post">
+            <form method="post" class="bg-transparent align-items-center text-center">
               {% csrf_token %}
-              <div class="form-group">
+              <div class="form-group" class="mb-4 mt-4 text-start">
                 <label for="username">Username</label>
                 <input type="text" name="username" class="form-control">
               </div>
           
-              <div class="form-group">
+              <div class="form-group" class="mb-4 mt-4 text-start">
                 <label for="password">Password</label>
                 <input type="password" name="password" class="form-control">
               </div>
           
-              <button type="submit" class="btn btn-primary mt-2">Ingresar</button>
-          
+              <button type="submit" class="btn btn-primary mt-2 mb-4 px-4 shadow">Ingresar</button>
+              <a href="{% url 'index' %}"><button type="button" class="btn btn-primary mt-2 mb-4 px-4 shadow">Cancelar</button></a>
+              <a href="#"><h5>¿Olvidaste tu Contraseña?</h5></a>
             </form>
-          
+        </div>
+        <div class="col bg d-none d-lg-block col-md-7 col-lg-7 col-xl-6">
+          <div class="text-end">
+            <img src="{% static 'img/jeans-1.jpg' %}" alt="Jeans para moda de verano" class="w-100 h-50 shadow rounded">
           </div>
-    </div>
-    
+        </div>
+    </div>   
 </div>
 
 {% endblock contenido%}    
