--- a/base/templates/comercial/login.html
+++ b/base/templates/comercial/login.html
@@ -8,12 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cetta - {{titulo}}</title>
     {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body class="bg-success bg-opacity-10 bg-gradient">
 
 {% block contenido %}
 
 <div class="container w-75 bg-dark bg-opacity-10 bg-gradient rounded shadow-sm mt-2 mb-2">
+  {% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-dismissible fade show {% if message.tags == 'success'%}alert-success{%else%}alert-danger{%endif%}" role="alert">
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      {{ message }}
+    </div>
+  {% endfor %}
+  {% endif %}
     <div class="row bg-transparent align-items-lg-stretch">
         <div class="col bg-transparent">
 
