--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -18,7 +18,7 @@
                   <p></p>
                   {% else %}
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="#">Registrarse</a>
+                      <a class="nav-link" aria-current="page" href="{% url 'registro' %}">Registrarse</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" aria-current="page" href="{% url 'login' %}">Ingresar</a>
