--- a/base/templates/comercial/registro.html
+++ b/base/templates/comercial/registro.html
@@ -25,12 +25,14 @@
   {% endif %}
     <div class="row bg-transparent align-items-lg-stretch">
         <div class="col bg-transparent">
-
           <h3 class="text-center">Registro</h3>
-          {% for usuario in usuarios %}
-            <h2>{{usuario.username}}</h2>
-          {% endfor %}
-          
+          <h4 class="text-center">¿Ya estás registrado/a? <a href="{% url 'login' %}">Ingresa aquí</a></h4>
+          <form method="post">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit" class="btn btn-primary mt-3 mb-4 px-4 shadow">Registrarse</button>
+            <a href="{% url 'index' %}"><button type="button" class="btn btn-primary mt-3 mb-4 px-4 shadow">Cancelar</button></a>
+          </form>    
         </div>
     </div>   
 </div>
