--- a/base/templates/partials/body.html
+++ b/base/templates/partials/body.html
@@ -9,7 +9,7 @@
     {% bootstrap_css %}
     {% bootstrap_javascript %}
     {% comment %} <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" href="{% static 'Swiper/swiper-bundle.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'Swiper/swiper-bundle.min.css' %}"/>{% endcomment %}
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
 
     <!- para las alertas ->
