--- a/base/templates/usuario/actualizar_datos.html
+++ b/base/templates/usuario/actualizar_datos.html
@@ -5,7 +5,13 @@
 
 <div class="container">
 
-<h2>Datos del usuario<h2>
+    <h2>Datos del usuario</h2>
+    <br>
+    <h4>{{user.get_nombre_completo}}</h4>
+    <br>
+    <h5>{{user.numero_celular}}</h5>
+    <h5>{{user.direccion_completa}}</h5>
+    
 
 </div>
 
