--- a/base/templates/partials/body.html
+++ b/base/templates/partials/body.html
@@ -15,6 +15,7 @@
     <!- para las alertas ->
     {% comment %} <link href="{% static 'Toastr/css/toastr.min.css' %}" rel="stylesheet"> {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/mis_estilos.css' %}"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body class="bg-success bg-opacity-10 bg-gradient">
     {% include 'partials/header.html' %}
