--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -12,7 +12,7 @@
 {% comment %} Slider {% endcomment %}
 {% if messages %}
   {% for message in messages %}
-    <div class="alert alert-dismissible fade show {% if message.tags == 'success'%}alert-success{%else%}alert-danger{%endif%}" role="alert">
+    <div class="alert alert-dismissible fade show fw-bold {% if message.tags == 'success'%}alert-success{%else%}alert-danger{%endif%}" role="alert">
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       {{ message }}
     </div>
