--- a/base/templates/usuario/actualizar_datos.html
+++ b/base/templates/usuario/actualizar_datos.html
@@ -5,7 +5,7 @@
 <div class="container w-75 bg-dark bg-opacity-10 bg-gradient rounded shadow-sm mt-2 mb-2">
     {% if messages %}
     {% for message in messages %}
-      <div class="alert alert-dismissible fade show {% if message.tags == 'success'%}alert-success{%else%}alert-danger{%endif%}" role="alert">
+      <div class="alert alert-dismissible fade show fw-bold {% if message.tags == 'success'%}alert-success{%else%}alert-danger{%endif%}" role="alert">
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         {{ message }}
       </div>
