--- a/base/templates/usuario/actualizar_datos.html
+++ b/base/templates/usuario/actualizar_datos.html
@@ -1,9 +1,7 @@
 {% extends 'partials/body.html' %}
 
 {% block contenido %}
-
-<div class="container w-75 bg-dark bg-opacity-10 bg-gradient rounded shadow-sm mt-2 mb-2">
-    {% if messages %}
+{% if messages %}
     {% for message in messages %}
       <div class="alert alert-dismissible fade show fw-bold {% if message.tags == 'success'%}alert-success{%else%}alert-danger{%endif%}" role="alert">
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -11,9 +9,23 @@
       </div>
     {% endfor %}
     {% endif %}
+<div class="container">
+<br>
+<ul class="nav nav-pills nav justify-content-center">
+    <li class="nav-item px-5">
+      <h4><a class="nav-link" href="#">Cambiar contraseña</a></h4>
+    </li>
+    <li class="nav-item">
+      <h4><a class="nav-link" href="#">Eliminar Cuenta</a></h4>
+    </li>
+  </ul>
+  <br>
+</div>
+<div class="container w-75 bg-dark bg-opacity-10 bg-gradient rounded shadow-sm mt-2 mb-2">
+   
       <div class="row bg-transparent align-items-lg-stretch">
           <div class="col bg-transparent">
-            <h3 class="text-center">Editar datos</h3>
+            <h3 class="text-center mt-2">Editar datos</h3>
             <form method="POST">
               {% csrf_token %}
               {{ form }}
