--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -52,7 +52,7 @@
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">{% bs_icon 'bag-fill' %}Mis Compras</a></li>
-                      <li><a class="dropdown-item" href="{% url 'actualizar_datos' user.id %}">{% bs_icon 'arrow-clockwise' %}Actualizar Datos</a></li>
+                      <li id="abrirActualizar"><a class="dropdown-item">{% bs_icon 'arrow-clockwise' %}Actualizar Datos</a></li>
                           <li><hr class="dropdown-divider"></li> 
                       <li><a class="dropdown-item" href="{% url 'logout' %}">{% bs_icon 'box-arrow-left' %}Cerrar Sesión</a></li>
                     </ul>
@@ -64,17 +64,7 @@
                   {% else %}
                       <p></p>
                       <!-- Contenido para usuarios no autenticados -->
-                  {% endif %} 
-                
-                  {% comment %} <li class="nav-item">
-                    <a class="nav-link" href="#" data-bs-toggle="tooltip" data-bs-placement="right" title="Carrito de compras">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                      </svg>
-                    </a>
-                    <!-- <a class="nav-link disabled" >Deshabilitado</a> -->
-                  </li> {% endcomment %} 
-                  
+                  {% endif %}   
                 </ul>
                 <form class="d-flex" role="search">
                   <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
@@ -84,4 +74,80 @@
             </div>
           </nav>
     </div>
+    <!--Modal-->
+    <div class="modal fade" id="modalActualizar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title text-dark" id="exampleModalLabel">Tus datos</h4>
+            <button id="botonCerrarModalx" type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        <div class="modal-body">
+          <table class="table table-sm">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="modal-footer">
+            <button id="botonCerrarModal" type="button" class="btn btn-secondary bg-gradient" data-dismiss="modal">Cerrar</button>
+            <a href="{% url 'actualizar_datos' user.id %}"><button type="button" class="btn btn-warning bg-gradient">Editar datos</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<script>
+  $(document).ready(function(){
+    // Evento click para abrir el modal
+    $("#abrirActualizar").click(function(){
+      $("#modalActualizar").modal('show'); // Mostrar el modal
+    });
+  });
+</script>
+
+<script>
+  $(document).ready(function(){
+    // Evento click para cerrar el modal
+    $("#botonCerrarModal").click(function(){
+      $("#modalActualizar").modal('hide'); // Cerrar el modal
+    });
+  });
+</script>
+
+<script>
+  $(document).ready(function(){
+    // Evento click para cerrar el modal
+    $("#botonCerrarModalx").click(function(){
+      $("#modalActualizar").modal('hide'); // Cerrar el modal
+    });
+  });
+</script>
+  
 </header>
